# network-automation

./: .gitignore  README.md  config.yml  defaults.yml  groups.yml  hosts.yml  passwords.gpg  poetry.toml  pyproject.toml  read_files.py  requirements.txt  runbook1.py
aruba/: README.md  ansible.cfg  inventory.ini  requirements.txt
aruba/group_vars/: all.yml  vault
aruba/playbooks/: set_hostnames.yml  show_run.yml
configs/: http_mgmt_eos.txt
extra/: check_overlap.py  devices.txt  file_processing.py  myfile.txt  read_csv.py  write_files.py
runbooks/: runbook10.py  runbook3.py  runbook4.py  runbook5.py  runbook6.py  runbook7.py  runbook8.py  runbook9.py
runbooks/examples/: gpg_example.py  password.py  runbook10.py  runbook3.py
runbooks/napalm/: runbook10.py
runbooks/netmiko/: progress_bar.py  structured_data.py
runbooks/password_handling/: gpg_example.py
runbooks/scrapli/: runbook2.py  runbook8.py
