[tool.poetry]
name = "network-automation"
version = "1.0.0"
description = "Network automation"
authors = ["Cole Phillips"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.4"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "23.2.0"
bcrypt = "4.1.3"
certifi = "2024.6.2"
cffi = "1.16.0"
chardet = "4.0.0"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
cryptography = "42.0.8"
decorator = "5.1.1"
dict2xml = "1.7.5"
dill = "0.3.8"
distro = "1.9.0"
executing = "2.0.1"
f5-icontrol-rest = "1.3.13"
frozenlist = "1.4.1"
future = "1.0.0"
genie = "24.4.3"
genie-libs-clean = "24.4"
genie-libs-conf = "24.4"
genie-libs-filetransferutils = "24.4"
genie-libs-health = "24.4"
genie-libs-ops = "24.4"
genie-libs-parser = "24.4"
genie-libs-sdk = "24.4"
gitdb = "4.0.11"
GitPython = "3.1.43"
grpcio = "1.64.1"
idna = "3.7"
ipdb = "0.13.13"
ipython = "8.25.0"
jedi = "0.19.1"
Jinja2 = "3.1.4"
jsonpickle = "3.2.2"
junit-xml = "1.9"
junos-eznc = "2.7.1"
lxml = "4.9.4"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
napalm = "5.0.0"
napalm-aruba-cx = "0.1.4"
ncclient = "0.6.15"
netaddr = "0.10.1"
netmiko = "4.3.0"
netutils = "1.8.1"
nornir = "3.4.1"
nornir-netmiko = "1.0.1"
nornir-utils = "0.2.0"
nornir-napalm = "0.5.0"
nornir-scrapli = "2024.1.30"
ntc-templates = "5.1.0"
packaging = "24.1"
paramiko = "3.4.0"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
ply = "3.11"
prettytable = "3.10.0"
prompt-toolkit = "3.0.47"
protobuf = "5.27.1"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyaoscx = "1.0.0"
pyasn1 = "0.4.8"
pyats = "24.4"
pyats-aereport = "24.4"
pyats-aetest = "24.4"
pyats-async = "24.4"
pyats-connections = "24.4"
pyats-datastructures = "24.4"
pyats-easypy = "24.4"
pyats-kleenex = "24.4"
pyats-log = "24.4"
pyats-reporter = "24.4"
pyats-results = "24.4"
pyats-tcl = "24.4"
pyats-topology = "24.4"
pyats-utils = "24.4"
pycparser = "2.22"
pyeapi = "1.0.2"
pyftpdlib = "1.5.9"
Pygments = "2.18.0"
PyNaCl = "1.5.0"
pyparsing = "3.1.2"
pyserial = "3.5"
pysmi-lextudio = "1.4.3"
pysnmp-lextudio = "5.0.29"
pysnmpcrypto = "0.0.4"
python-dotenv = "1.0.1"
python-engineio = "3.14.2"
python-gnupg = "0.5.2"
python-socketio = "4.6.1"
PyYAML = "6.0.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rest-connector = "24.4"
rich = "13.7.1"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
scp = "0.15.0"
scrapli = "2024.1.30"
scrapli-cfg = "2024.1.30"
scrapli-community = "2024.1.30"
scrapli-netconf = "2024.1.30"
six = "1.16.0"
smmap = "5.0.1"
stack-data = "0.6.3"
textfsm = "1.1.3"
tftpy = "0.8.0"
tqdm = "4.66.4"
traitlets = "5.14.3"
transitions = "0.9.1"
ttp = "0.9.5"
ttp-templates = "0.3.6"
typing-extensions = "4.12.2"
unicon = "24.4"
unicon-plugins = "24.4"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
xmltodict = "0.13.0"
yamllint = "1.35.1"
yamlordereddictloader = "0.4.2"
yang-connector = "24.4"
yarl = "1.9.4"

[tool.poetry.dev-dependencies]
# None

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
